[gd_scene load_steps=14 format=2]

[ext_resource path="res://Voicelines/Mackenzie_Encounter_Line1.mp3" type="AudioStream" id=1]
[ext_resource path="res://Voicelines/Mackenzie_Encounter_Line2.mp3" type="AudioStream" id=2]
[ext_resource path="res://Voicelines/Mackenzie_Encounter_Line3.mp3" type="AudioStream" id=3]
[ext_resource path="res://Voices.gd" type="Script" id=4]
[ext_resource path="res://Voicelines/Michelle_Lines 4.wav" type="AudioStream" id=5]
[ext_resource path="res://Voicelines/Michelle_Lines 5.wav" type="AudioStream" id=6]
[ext_resource path="res://Voicelines/Michelle_Lines 6.wav" type="AudioStream" id=7]
[ext_resource path="res://Voicelines/Michelle_Lines 3.wav" type="AudioStream" id=8]
[ext_resource path="res://Voicelines/Michelle_Lines 2.wav" type="AudioStream" id=9]
[ext_resource path="res://Voicelines/Michelle_Line 1.wav" type="AudioStream" id=10]
[ext_resource path="res://Voicelines/Michelle_Lines Sequence.wav" type="AudioStream" id=11]
[ext_resource path="res://Voicelines/Michelle_Lines 8.wav" type="AudioStream" id=12]
[ext_resource path="res://Voicelines/Michelle_Lines 7.wav" type="AudioStream" id=13]

[node name="Voices" type="Node2D"]
script = ExtResource( 4 )

[node name="MackenzieVoiceline1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="MackenzieVoiceline2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MackenzieVoiceline3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MichelleVoiceline1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="MichelleVoiceline2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="MichelleVoiceline3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MichelleVoiceline4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MichelleVoiceline6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MichelleVoiceline7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MichelleVoiceline5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="MichelleVoiceline8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="MichelleVoiceline9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
